--- a/css.css
+++ b/css.css
@@ -2,7 +2,7 @@ body {
 	text-align: center;
 	font-family: Verdana;
 	color: #800000;
-	background-color: #E0C2C2;
+	background-color: #F6EDED;
 }
 p {
 	text-align: left;
