--- a/css.css
+++ b/css.css
@@ -2,7 +2,7 @@ body {
 	text-align: center;
 	font-family: Verdana;
 	color: #800000;
-	background-color: #D6ACAC;
+	background-color: #ffd6d6;
 }
 p {
 	text-align: left;
