--- a/css.css
+++ b/css.css
@@ -2,7 +2,7 @@ body {
 	text-align: center;
 	font-family: Verdana;
 	color: #800000;
-	background-color: #B85C80;
+	background-color: #DC93AF;
 }
 p {
 	text-align: left;
