--- a/css.css
+++ b/css.css
@@ -2,7 +2,7 @@ body {
 	text-align: center;
 	font-family: Verdana;
 	color: #49011D;
-	background-color: #DC93AF;
+	background-color: #534248;
 }
 p {
 	text-align: left;
