--- a/css.css
+++ b/css.css
@@ -2,7 +2,7 @@ body {
 	text-align: center;
 	font-family: Verdana;
 	color: #49011D;
-	background-color: #DB89A9;
+	background-color: #E6AFC4;
 }
 p {
 	text-align: left;
